fix overflow-wrap

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .black-progress .mat-progress-bar-fill::after {
   background-color: #212529 !important;
 }
+.break-word {
+  overflow-wrap: break-word;
+}
